Mobile menu design fix, image list style fixes, collapsing list style fixes

--- a/static/scss/_style.scss
+++ b/static/scss/_style.scss
@@ -107,6 +107,11 @@ h2 {
 		border-bottom: 1px solid $gray-line;
 		font-weight: 400;
 		padding-bottom: 15px;
+		margin-top: 30px;
+
+		&:first-of-type {
+			margin-top: inherit;
+		}
 
 		&:first-child {
 			@include respond-min(768px) {
@@ -424,6 +429,10 @@ blockquote {
 		span {
 			@include visuallyhidden;
 		}
+
+		&.active {
+			opacity: 0.5;
+		}
 	}
 
 	.nav-menu-on {
@@ -443,19 +452,22 @@ blockquote {
 	}
 
 	[role="navigation"] {
-		background: url(/static/img/bg-pattern.jpg) repeat top center $green-dark;
-		float: right;
-		@include retina-display { 
-			//double density for retina display
-			background-size: 250px 250px;
-		}
+		background: $green-dark;
+
+		width: 100%;
+
 		@include respond-min(768px) {
-			background: none;
+			width: auto;
+			float: right;
 		}
 
 		ul {
-			margin: 0;
+			margin: 10px 0 0;
 			padding: 0;
+
+			@include respond-min(768px) {
+				margin: 0;
+			}
 		}
 
 		li {
@@ -464,11 +476,16 @@ blockquote {
 			display: block;			
 			font-weight: 700;
 			line-height: 16px;
-			margin-top: 0;
-			text-align: center;
+			text-align: left;
 			text-transform: uppercase;
+			margin: 0 10px;
+			border-top: 1px solid lighten($green-dark, 5%);
+
 			@include respond-min(768px) {
+				margin: 0;
+				border: 0;
 				float: left;
+				text-align: left;
 			}
 
 			&.active a {
@@ -479,12 +496,16 @@ blockquote {
 		a {
 			color: #fff;
 			display: block;
-			padding: 20px 10px;
+			padding: 20px 0px;
 			text-decoration: none;
 
 			&:active, &:hover {
 				color: $green-very-light;
-			}			
+			}
+
+			@include respond-min(768px) {
+				padding: 20px 10px;
+			}
 		}
 
 		.nav-primary {
@@ -651,12 +672,9 @@ blockquote {
 
 	dl {
 		margin: 0 10px;
-		padding: 20px 0 25px;
+		padding: 25px 0;
 		@include clearfix;
 		dt {
-			float: left;
-			width: 32.5%;
-			padding-right: 2%;
 			i.icon {
 				color: $green;
 				margin-right: 8px;
@@ -670,6 +688,11 @@ blockquote {
 	}
 
 	@include respond-min(768px) {
+		dt {
+			float: left;
+			width: 32.5%;
+			padding-right: 2%;
+		}
 		dl {
 			margin: 0;
 		}
@@ -1017,7 +1040,7 @@ blockquote {
 		display: block;
 		margin: 0;
 		position: relative;
-		text-align: right;
+		text-align: left;
 
 		span {
 			cursor: pointer;
@@ -1506,10 +1529,22 @@ blockquote {
 	}
 }
 
-h2 + .label.form-controls,
-h2 + .list-collapsing {
-	margin-top: -45px;
+@include respond-min(768px) {
+
+	.list-collapsing-header {
+		float: left;
+
+		+ .form-controls.label {
+			margin: 50px 0 0;
+			text-align: right;
+		}
+	}
+
+	.form-controls.label {
+		float: right;
+	}	
 }
+
 
 .list-collapsing {
 	// reusable accordion style collapsing list, as seen on the Get Started Page. 'Expand/Collapse All' toggle is generated by the javascript. H2 is used for label, and 'collapsing-content' class is used to identify all content that should expand and collapse onclick.
@@ -1517,6 +1552,7 @@ h2 + .list-collapsing {
 	list-style: none;
 	margin: 30px 0;
 	padding: 0;
+	clear: both;
 
 	&.active {
 		
@@ -1592,7 +1628,6 @@ h2 + .list-collapsing {
 	}
 
 	a {
-		display: block;
 		text-decoration: none;
 
 		&:hover,
@@ -1600,25 +1635,30 @@ h2 + .list-collapsing {
 		&:focus {
 			color: $text-light;
 		}
+
+		&.link-readmore {
+			margin: 0;
+		}
 	}
 
 	img {
 		display: block;
-		margin: 0 auto;
+		margin: 0 auto 25px;
 		max-width: 100%;
 	}
 
 	@include respond-min(768px) {
 		img {
 			float: left;
-			margin: 0 50px 0 0;
+			margin: 0 40px 0 0;
 			max-width: 200px;
 			max-height: 200px;
 		}
-	}
 
-	h3 {
-		margin: 20px 0 10px;
+		h2, h3, h4, p {
+			padding-left: 240px;
+		}
+
 	}
 
 }
